Added import typography to master file

--- a/scss/frms-master.scss
+++ b/scss/frms-master.scss
@@ -1,2 +1,3 @@
 /* This file is for global styles for Federal Records Management & Shredding Website */
 @import url(_color.scss);
+@import url(_typography.scss);
