--- a/scss/frms-master.css
+++ b/scss/frms-master.css
@@ -1,3 +1,3 @@
 /* This file is for global styles for Federal Records Management & Shredding Website */
 @import url(_color.scss);
-@import url(_typography.scss);
+@import url(_typography.scss);/*# sourceMappingURL=frms-master.css.map */
