Working on auto-compile and auto-minify scss

--- a/scss/frms-master.scss
+++ b/scss/frms-master.scss
@@ -1,6 +1,6 @@
-/* This file is for global styles for Federal Records Management & Shredding Website */
+// Master Styling for Federal Records Management
 @import '_color.scss';
 @import '_typography.scss';
 
-//Navigation
-.empty-class {background-color: $frms-green-g70;}
+// Navigation
+.empty-class{background-color:$frms-green-g30;}
