Testing the automation again

--- a/scss/_color.scss
+++ b/scss/_color.scss
@@ -42,7 +42,7 @@ $frms-manilla-m70:#3E3C35;
 
 
 
-/* Global Classes for FrontEnd */
+/* Global Classes for FrontEnd Dev */
 #green10, .green10 {h1,h2,h3,h4,h5,h6,div,span,a,p {@include Green10;}}
 #green20, .green20 {h1,h2,h3,h4,h5,h6,div,span,a,p {@include Green20;}}
 #green30, .green30 {h1,h2,h3,h4,h5,h6,div,span,a,p {@include Green30;}}
