Added CSS for Request A Quote Button for Main Nav

--- a/scss/frms-master.scss
+++ b/scss/frms-master.scss
@@ -4,3 +4,13 @@
 
 // Navigation
 .empty-class{background-color:$frms-green-g40;}
+
+// Request Quote CTA
+a.lime-cta {
+    padding: 16px 32px;
+    background: $frms-green-g30;
+    border-radius: 4px;
+    color: $frms-green-g70;
+    font-weight: 600;
+    letter-spacing: 0;
+}
