Added CSS for Request A Quote Button for Main Nav

--- a/scss/frms-master.scss
+++ b/scss/frms-master.scss
@@ -5,7 +5,7 @@
 // Navigation
 .empty-class{background-color:$frms-green-g40;}
 
-// Request Quote CTA
+// Request A Quote CTA
 a.lime-cta {
     padding: 16px 32px;
     background: $frms-green-g30;
