CSS isnt influencing webpage yet... testing

--- a/scss/frms-master.scss
+++ b/scss/frms-master.scss
@@ -8,9 +8,9 @@
 // Request A Quote CTA
 a.lime-cta {
     padding: 16px 32px;
-    background: $frms-green-g30;
+    background: $frms-green-g30 !important;
     border-radius: 4px;
-    color: $frms-green-g70;
+    color: $frms-green-g70 !important;
     font-weight: 600;
     letter-spacing: 0;
 }
