Added hover to Lime CTA

--- a/scss/frms-master.css
+++ b/scss/frms-master.css
@@ -113,14 +113,11 @@ a.lime-cta {
   font-weight: 600;
   letter-spacing: 0;
 }
-
-::selection {
-  color: inhert;
-  background: #E6EED8 !important;
-}nt;
+a.lime-cta:hover {
+  background: #50B26F;
 }
 
 ::selection {
   color: inhert;
   background: #E6EED8 !important;
-}/*# sourceMappingURL=frms-master.css.map */
+}
