--- a/scss/frms-master.scss
+++ b/scss/frms-master.scss
@@ -13,6 +13,9 @@ a.lime-cta {
     color: $frms-green-g70 !important;
     font-weight: 600;
     letter-spacing: 0;
+        &:hover {
+            background: $frms-green-g50;
+        }
 }
 
 // General Purpose - Housekeeping
