--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -17,8 +17,8 @@ $frms-sharp: 'Sharp Grotesk', 'Inter', 'Open Sans', Arial, apple-system, system-
 
 
 /* Typography */
-h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {-webkit-font-smoothing: antialiased !important;}
-p, li, ol, span {@include Sans;}
+// h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {-webkit-font-smoothing: antialiased !important;}
+// p, li, ol, span {@include Sans;}
 
 // Type Casing
 .uppercase {h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {@include uppercase;}} 
