--- a/scss/frms-master.css
+++ b/scss/frms-master.css
@@ -70,14 +70,6 @@
 }
 
 /* Typography */
-h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {
-  -webkit-font-smoothing: antialiased !important;
-}
-
-p, li, ol, span {
-  font-family: "Shredder Sans", "Inter", "Open Sans", Arial, apple-system, system-ui, BlinkMacSystemFont, sans serif !important;
-}
-
 .uppercase h1, .uppercase h2, .uppercase h3, .uppercase h4, .uppercase h5, .uppercase h6, .uppercase a, .uppercase li, .uppercase ul, .uppercase span, .uppercase div, .uppercase ol, .uppercase p, .uppercase button {
   text-transform: uppercase !important;
 }
@@ -119,7 +111,12 @@ a.lime-cta:hover {
   fill: #FAF9F6 !important;
 }
 
-::selection {
+::-moz-selection {
   color: inhert;
   background: #E6EED8 !important;
 }
+
+::selection {
+  color: inhert;
+  background: #E6EED8 !important;
+}/*# sourceMappingURL=frms-master.css.map */
