--- a/scss/frms-master.css
+++ b/scss/frms-master.css
@@ -60,7 +60,7 @@
   color: #3E3C35 !important;
 }
 
-/* Global Classes for FrontEnd */
+/* Global Classes for FrontEnd Use */
 #sans h1, #sans h2, #sans h3, #sans h4, #sans h5, #sans h6, #sans div, #sans span, #sans a, #sans p, .sans h1, .sans h2, .sans h3, .sans h4, .sans h5, .sans h6, .sans div, .sans span, .sans a, .sans p {
   font-family: "Shredder Sans", "Inter", "Open Sans", Arial, apple-system, system-ui, BlinkMacSystemFont, sans serif !important;
 }
@@ -69,7 +69,6 @@
   font-family: "Sharp Grotesk", "Inter", "Open Sans", Arial, apple-system, system-ui, BlinkMacSystemFont, sans serif !important;
 }
 
-/* Typography */
 .uppercase h1, .uppercase h2, .uppercase h3, .uppercase h4, .uppercase h5, .uppercase h6, .uppercase a, .uppercase li, .uppercase ul, .uppercase span, .uppercase div, .uppercase ol, .uppercase p, .uppercase button {
   text-transform: uppercase !important;
 }
@@ -112,11 +111,11 @@ a.lime-cta:hover {
 }
 
 ::-moz-selection {
-  color: inhert;
+  color: inhert !important;
   background: #E6EED8 !important;
 }
 
 ::selection {
-  color: inhert;
+  color: inhert !important;
   background: #E6EED8 !important;
 }/*# sourceMappingURL=frms-master.css.map */
