--- a/scss/frms-master.scss
+++ b/scss/frms-master.scss
@@ -22,6 +22,6 @@ a.lime-cta {
 
 // General Purpose - Housekeeping
 ::selection {
-    color: inhert !important;
+    color: inhert;
     background: $green-g20 !important;
 }
