Typo for inherit css property

--- a/scss/frms-master.scss
+++ b/scss/frms-master.scss
@@ -22,6 +22,6 @@ a.lime-cta {
 
 // General Purpose - Housekeeping
 ::selection {
-    color: inhert;
+    color: $green-g70;
     background: $green-g20 !important;
 }
