Adjust VSCode settings for compiling and minifying

--- a/scss/_color.scss
+++ b/scss/_color.scss
@@ -2,7 +2,7 @@
 
 /* Colors Variables */
 
-// Green
+// FRMS Green
 $green-g10: #F6F7F3;
 $green-g20: #E6EED8;
 $green-g30: #C0E246;
@@ -22,7 +22,7 @@ $green-g80: #0A2E29;
 @mixin Green70 {color: $green-g70 !important;}
 @mixin Green80 {color: $green-g80 !important;}
 
-// Manilla
+// FRMS Manilla
 $manilla-m10:#FAF9F6;
 $manilla-m20:#F4F4F0;
 $manilla-m30:#E0DED7;
