--- a/scss/frms-master.css
+++ b/scss/frms-master.css
@@ -69,6 +69,8 @@
   font-family: "Sharp Grotesk", "Inter", "Open Sans", Arial, apple-system, system-ui, BlinkMacSystemFont, sans serif !important;
 }
 
+
+/* Type Casing - Uppercase & Capitalize */
 .uppercase h1, .uppercase h2, .uppercase h3, .uppercase h4, .uppercase h5, .uppercase h6, .uppercase a, .uppercase li, .uppercase ul, .uppercase span, .uppercase div, .uppercase ol, .uppercase p, .uppercase button {
   text-transform: uppercase !important;
 }
@@ -111,11 +113,11 @@ a.lime-cta:hover {
 }
 
 ::-moz-selection {
-  color: inhert !important;
+  color: #12423C;
   background: #E6EED8 !important;
 }
 
 ::selection {
-  color: inhert !important;
+  color: #12423C;
   background: #E6EED8 !important;
 }/*# sourceMappingURL=frms-master.css.map */
