--- a/scss/frms-master.css
+++ b/scss/frms-master.css
@@ -60,6 +60,10 @@
   color: #3E3C35 !important;
 }
 
+h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {
+  font-family: "Shredder Sans", "Inter", "Open Sans", Arial, apple-system, system-ui, BlinkMacSystemFont, sans serif;
+}
+
 /* Global Classes for FrontEnd Use */
 #sans h1, #sans h2, #sans h3, #sans h4, #sans h5, #sans h6, #sans div, #sans span, #sans a, #sans p, .sans h1, .sans h2, .sans h3, .sans h4, .sans h5, .sans h6, .sans div, .sans span, .sans a, .sans p {
   font-family: "Shredder Sans", "Inter", "Open Sans", Arial, apple-system, system-ui, BlinkMacSystemFont, sans serif !important;
@@ -68,7 +72,6 @@
 #sharp h1, #sharp h2, #sharp h3, #sharp h4, #sharp h5, #sharp h6, #sharp div, #sharp span, #sharp a, #sharp p, .sharp h1, .sharp h2, .sharp h3, .sharp h4, .sharp h5, .sharp h6, .sharp div, .sharp span, .sharp a, .sharp p {
   font-family: "Sharp Grotesk", "Inter", "Open Sans", Arial, apple-system, system-ui, BlinkMacSystemFont, sans serif !important;
 }
-
 
 /* Type Casing - Uppercase & Capitalize */
 .uppercase h1, .uppercase h2, .uppercase h3, .uppercase h4, .uppercase h5, .uppercase h6, .uppercase a, .uppercase li, .uppercase ul, .uppercase span, .uppercase div, .uppercase ol, .uppercase p, .uppercase button {
