Added homepage partial

--- a/scss/frms-master.scss
+++ b/scss/frms-master.scss
@@ -1,6 +1,7 @@
 // Master Styling for Federal Records Management
 @import '_color.scss';
 @import '_typography.scss';
+@import '_homepage.scss';
 
 // Navigation
 .empty-class{background-color:$green-g40;}
