--- a/scss/frms-master.css
+++ b/scss/frms-master.css
@@ -97,6 +97,17 @@ h1 .underline, h2 .underline, h3 .underline, h4 .underline, h5 .underline, h6 .u
   text-decoration: underline !important;
 }
 
+/* FRMS Homepage Styling */
+body.grve-header-overlapping #grve-main-header {
+  position: absolute;
+  top: 2rem;
+  left: 0;
+  right: 0;
+  max-width: 1380px;
+  border-radius: 16px;
+  margin: 0 auto;
+}
+
 .empty-class {
   background-color: #83C55E;
 }
