--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -1,11 +1,25 @@
 /* FRMS Homepage Styling */
 
 body.grve-header-overlapping #grve-main-header {
-    position: absolute;
-    top: 2rem;
     left: 0;
     right: 0;
     max-width: 1380px;
-    border-radius: 16px;
-    margin: 0 auto;
+    border-radius: 12px;
+    margin: 2rem auto;
+}
+
+// Request A Quote Form - Form 197 - Multi Step Form
+
+#wpforms-form-197 {
+    .wpforms-page-indicator{
+        margin: 0;
+        &.progress {
+            display: flex;
+            flex-direction: column-reverse;
+            gap: 8px;
+        }
+            .wpforms-page-indicator-page-progress-wrap {
+                height: 8px;
+            }
+    }
 }
