--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -6,20 +6,21 @@ $frms-sharp: 'Sharp Grotesk', 'Inter', 'Open Sans', Arial, apple-system, system-
 h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {font-family: $frms-sans;}
 
 // Mixins - Must be decalred first before
-@mixin Sans {font-family: $frms-sans !important;}
-@mixin Sharp {font-family: $frms-sharp !important;}
-@mixin uppercase {text-transform: uppercase !important;} 
-@mixin titleCase {text-transform: capitalize !important;}
+@mixin sans {font-family: $frms-sans !important;}
+@mixin sharp {font-family: $frms-sharp !important;}
+@mixin uppercase {text-transform: uppercase !important;}
+@mixin titlecase {text-transform: capitalize !important;}
 
 /* Global Classes for FrontEnd Use */
-#sans, .sans {h1,h2,h3,h4,h5,h6,div,span,a,p {@include Sans;}}
-#sharp, .sharp {h1,h2,h3,h4,h5,h6,div,span,a,p {@include Sharp;}}
-
+#sans, .sans {h1,h2,h3,h4,h5,h6,div,span,a,p {@include sans;}}
+#sharp, .sharp {h1,h2,h3,h4,h5,h6,div,span,a,p {@include sharp;}}
 
 /* Type Casing - Uppercase & Capitalize */
 .uppercase {h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {@include uppercase;}} 
-.titleCase {h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {@include titleCase;}}
-h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {.uppercase {@include uppercase;} .titleCase {@include titleCase;}}
+.titlecase {h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {@include titlecase;}}
+h1, h2, h3, h4, h5, h6, a, li, ul, span, div, ol, p, button {.uppercase {@include uppercase;} .titlecase {@include titlecase;}}
 
 // Underline
 .underline {h1,h2,h3,h4,h5,h6,div,span,a,p {text-decoration: underline !important;}} h1,h2,h3,h4,h5,h6,div,span,a,p {.underline {text-decoration: underline !important;}}
+
+// Add Font Weight Modifiers
